--- a/server/src/RestaurantApp.Web/appsettings.json
+++ b/server/src/RestaurantApp.Web/appsettings.json
@@ -16,5 +16,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "DateTimeFormat": "yyyy-MM-dd HH:mm:ss zzz",
+    "DateFormat": "yyyy-MM-dd"
+  },
   "AllowedHosts": "*"
 }
