Added image upload feature

--- a/server/src/RestaurantApp.Web/appsettings.json
+++ b/server/src/RestaurantApp.Web/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "HostUrl": "https://localhost:44367/",
   "JwtSettings": {
     "JwtKey": "SecretJwtKeyGenerator",
     "JwtIssuer": "https://localhost:44344/",
