--- a/server/src/RestaurantApp.Web/RestaurantApp.Web.csproj
+++ b/server/src/RestaurantApp.Web/RestaurantApp.Web.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="10.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
@@ -23,7 +25,10 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\MenuCategoryPictures\" />
+    <Folder Include="wwwroot\Images\GalleryPictures\" />
     <Folder Include="wwwroot\Images\ProfilePictures\" />
+    <Folder Include="wwwroot\Images\MenuItemPictures\" />
+    
   </ItemGroup>
 
 </Project>
